fix testimonial responsive

--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
                     <div class="d-md-none mt-n6 px-3 scale-up">
                       <div class="card card-body py-grid-gutter px-grid-gutter border-0 shadow mx-auto" style="max-width: 28rem;">
                         <blockquote class="blockquote">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
-                          <footer class="blockquote-footer">Paul Anderson, CEO Company Ltd.</footer>
+                          <p>SavvyChef has revolutionized the way I cook. No more guesswork with measurements, and the substitution wizard is a lifesaver!</p>
+                          <footer class="blockquote-footer">Rick D.</footer>
                         </blockquote>
                       </div>
                     </div>
