--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         height: 2.75rem;
         margin-bottom: .75rem;
         vertical-align: text-bottom;
-        border: .15em solid #766df4;
+        border: .15em solid #ebb57a;
         border-right-color: transparent;
         border-radius: 50%;
         -webkit-animation: spinner .75s linear infinite;
