--- a/index.html
+++ b/index.html
@@ -309,8 +309,11 @@
                     </div>
                     <div class="d-flex w-100 align-items-end py-3 py-sm-2 px-4" style="max-width: 20rem;"><span class="h2 fw-normal text-muted mb-1 me-2">$</span><span class="price display-2 fw-normal text-primary px-1 me-2" data-current-price="0" data-new-price="0">0</span><span class="h3 fs-lg fw-medium text-muted mb-2">per<br>month</span></div>
                     <ul class="list-unstyled py-2 mb-0">
-                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>Up to 3 projects for each member</span></li>
-                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>2 team members allowed</span></li>
+                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>Effortless Recipe Input</span></li>
+                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>Smart Unit Conversion</span></li>
+                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>Access to a limited <br> number of recipes</span></li>
+                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>Ability to create and <br> save a limited number <br> of shopping lists</span></li>
+                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>Ingredient Substitution <br> Wizard (basic version)</span></li>
                     </ul>
                   </div>
                   <div class="d-md-flex align-items-start py-4 py-sm-5">
@@ -320,10 +323,11 @@
                     </div>
                     <div class="d-flex w-100 align-items-end py-3 py-sm-2 px-4" style="max-width: 20rem;"><span class="h2 fw-normal text-muted mb-1 me-2">$</span><span class="price display-2 fw-normal text-primary px-1 me-2" data-current-price="15" data-new-price="12">4.99</span><span class="h3 fs-lg fw-medium text-muted mb-2">per<br>month</span></div>
                     <ul class="list-unstyled py-2 mb-0">
-                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>Unlimited number of projects</span></li>
-                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>Up to 5 team members</span></li>
-                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>24/7 support</span></li>
-                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>Up to 30GB storage space</span></li>
+                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>All features included <br> in the Basic plan</span></li>
+                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>Unlimited access to <br> all recipes in the app's  <br>catalog</span></li>
+                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>Unlimited creation and <br> saving of shopping lists</span></li>
+                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>Access to premium <br> video tutorials for <br> cooking techniques <br> and recipes</span></li>
+                      <li class="d-flex align-items-center text-nowrap mb-3"><i class="ai-check fs-xl text-primary me-2"></i><span>Ad-free experience</span></li>
                     </ul>
                   </div>
                 </div>
